fix editgroup_id references

--- a/python/fatcat_web/templates/changelog_view.html
+++ b/python/fatcat_web/templates/changelog_view.html
@@ -8,6 +8,6 @@
 </h1>
 
 <br><b>Timestamp:</b> {{ entry.timestamp }}
-<br><b>Editgroup:</b> <a href="/editgroup/{{editgroup.id}}">{{ editgroup.id }}</a>
+<br><b>Editgroup:</b> <a href="/editgroup/{{editgroup.editgroup_id}}">{{ editgroup.editgroup_id }}</a>
 
 {% endblock %}
