--- a/python/fatcat_web/templates/editgroup_view.html
+++ b/python/fatcat_web/templates/editgroup_view.html
@@ -4,7 +4,7 @@
 {# extended by changelog_entry #}
 {% block editgroupheader %}
 <h1 class="ui header">Edit Group
-<div class="sub header"><code>editgroup {{ editgroup.id }}</code></div></h1>
+<div class="sub header"><code>editgroup {{ editgroup.editgroup_id }}</code></div></h1>
 {% endblock %}
 
 {# TODO: <p>Editor: <a href="/editor/{{ editgroup.editor.username }}">{{ editgroup.editor.username }}</a> #}
