--- a/python/fatcat_web/templates/entity_history.html
+++ b/python/fatcat_web/templates/entity_history.html
@@ -21,7 +21,7 @@
   {% for entry in history %}
   <tr><td><a href="/changelog/{{ entry.changelog_entry.index }}">{{ entry.changelog_entry.index }}</a>
       <td>{{ entry.changelog_entry.timestamp }}
-      <td><a href="/editgroup/{{ entry.editgroup.id }}">{{ entry.editgroup.id }}</a>
+      <td><a href="/editgroup/{{ entry.editgroup.editgroup_id }}">{{ entry.editgroup.editgroup_id }}</a>
       <td><a href="/editor/{{ entry.editgroup.editor_id }}">{{ entry.editgroup.editor_id }}</a>
       <td>{% if entry.editgroup.description != None %}{{ entry.editgroup.description }}{% endif %}
   {% endfor %}
