better flask error pages

--- a/python/fatcat_web/templates/404.html
+++ b/python/fatcat_web/templates/404.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h1>404: Not Found</h1>
+<center>
+<div style="font-size: 8em;">404</div>
+<div style="font-size: 3em;">Not Found</div>
+</center>
 
 {% endblock %}
