--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -8,6 +8,10 @@
   <meta name="referrer" content="origin-when-cross-origin">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.2/dist/semantic.min.css">
+  <style>
+    /* bnewbold: fix light grey bars in header */
+    .ui.inverted.menu .item:before { background: none; }
+  </style>
 
 </head>
 <body style="margin-bottom: 100px; height: auto;">
