fixes for new elastic transform view code

--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -210,7 +210,7 @@ This release citing other releases.
 </div>
 {% endif %}
 
-{% if container != None and container.es != None %}
+{% if container != None and container.es %}
 <div class="ui segment attached">
 <b>Container Metadata</b><br>
 {% if container.es.is_oa == True %}
