auth required for creation; correct edit stub note

--- a/python/fatcat_web/templates/entity_edit.html
+++ b/python/fatcat_web/templates/entity_edit.html
@@ -3,6 +3,6 @@
 
 <h1>Not Implemented</h1>
 
-Entity editing isn't implemented yet, only creation. Sorry!
+<p>Entity editing via the web interface isn't implemented yet. Sorry!
 
 {% endblock %}
