--- a/python/fatcat_web/templates/release_search.html
+++ b/python/fatcat_web/templates/release_search.html
@@ -23,8 +23,8 @@
 {% for paper in found.results %}
 <div>
   <h4 style="margin-top: 1em; margin-bottom: 4px; font-size: 1.1em;"><a href="/release/{{ paper.ident }}" style="color: #2224c7;">{{ paper['title'] }}</a>
-  {% if paper.file_pdf_url %}
-  &nbsp;&nbsp;<a href="{{ paper.file_pdf_url }}" class="ui label small"><i class="file icon"></i>fulltext</a>
+  {% if paper.best_pdf_url %}
+  &nbsp;&nbsp;<a href="{{ paper.best_pdf_url }}" class="ui label small"><i class="file icon"></i>fulltext</a>
   {% endif %}
   </h4>
   <h5 style="margin-top: 4px; margin-bottom: 4px; font-size: 1em;">{{ ", ".join(paper.contrib_names) }}</h5>
