add photo attribution

--- a/python/fatcat_web/templates/about.html
+++ b/python/fatcat_web/templates/about.html
@@ -102,11 +102,11 @@ database library, Swagger/OpenAPI code generators, Kafka distributed log,
 Ansible configuration management tool, and Ubuntu GNU/Linux operating system
 distribution.
 
-<p>The front-page photo of a large feline with a cup of coffee is CC-0
-licensed.  The name "fat cat" can be interpreted as short for "large catalog",
-as the service aspires to be a <i>universal</i> (complete) catalog of the
-digital scholarly record.
-<!-- TODO: attribution anyways -->
+<p>The front-page photo of a large feline with a cup of coffee is by
+<a href="http://www.kampschroer.com/photography.html">Quinn Kampschroer</a>,
+under a CC-0 licensed.  The name "fat cat" can be interpreted as short for
+"large catalog", as the service aspires to be a <i>universal</i> (complete)
+catalog of the digital scholarly record.
 
 <p>A list of technical contributors, including volunteers, is maintained in the
 source code repository (<code>CONTRIBUTORS.md</code>). Thanks everybody!
