add container search to prod front page

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -53,7 +53,7 @@ indexing (aka, linking together of pre-prints and final copies).
 <tr><td><b>Container</b>
         <br>journal or serial
 {% if config.FATCAT_DOMAIN == 'fatcat.wiki' %}
-    <td>
+    <td><a href="/container/search">Search</a>
     <td><a href="/container/iznnn644szdwva7khyxqzc73bi">Journal</a>
 {% else %}
     <td><a href="/container/create">Create</a>
